<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/ic_menu_gallery"
        android:title="@string/menu_home"
        app:showAsAction="always"
        android:id="@+id/menu_home"/>

    <item
        android:icon="@drawable/ic_date_black_24dp"
        android:title="@string/menu_date"
        app:showAsAction="always"
        android:id="@+id/menu_date"/>

    <item
        android:icon="@drawable/ic_favorites_black_24dp"
        android:title="@string/menu_favorites"
        app:showAsAction="always"
        android:id="@+id/menu_favorites"/>

    <item
        android:icon="@drawable/ic_settings_black"
        android:title="@string/menu_settings"
        app:showAsAction="always"
        android:id="@+id/menu_settings"/>

    <item
        android:title="@string/menu_help"
        android:id="@+id/menu_help" />
</menu>